Wed Mar 12 16:10:01 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h (HAVE_SETVBUF): Removed; no longer used.

Thu Mar  6 19:46:53 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: tab stop setting apparently was under "Editor" in Visual
	C++ 2.x but it is under "Tabs" in Visual C++ 4.x.
	List number of warnings for regex.c (103, which is actually down
	from 121 prior to the change I just made to regex.c).

Sat Feb 15 15:27:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (dist-dir): Also handle SUBDIRS.
	(SUBDIRS): New variable.

Wed Jan 29 18:28:17 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h, options.h (GREP): Remove; no longer used.

Tue Jan 28 18:29:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* config.h: Remove SIZEOF_INT and SIZEOF_LONG; no longer needed
	with lib/md5.c changes.

1997-01-08  Jim Kingdon

	* filesubr.c (expand_wild): If we just find a file (that
	is, without expanding a wildcard), return the file name
	as specified rather than as it exists in the filesystem.

Thu Jan  2 13:30:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c, ndir.c, ndir.h, pwd.c, pwd.h, run.c, stripslash.c:
	Remove "675" paragraph;	see ../ChangeLog for rationale.

Wed Jan  1 22:51:01 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* options.h: Reword comment for TMPDIR_DFLT to make it clear that
	this isn't specific to the pserver server.

Tue Dec 31 14:17:38 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Remove another mention of grep; CVS no longer uses it.

Tue Dec 31 11:01:29 1996  Noel Cragg  <noel@gargle.rain.org>

	* README: Add note that the various support utilities can also be
 	found at the Cyclic FTP site; things move around on the net.

Tue Dec 31 12:33:29 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* README: Add note about lack of need for rsh.  I don't know if
	this is the best place to talk about this, but many people get
	confused by it.
